# ckb-tui

./: Cargo.toml  README.md
.github/workflows/: Release.yml
src/: main.rs
src/components/: mod.rs
src/components/dashboard/: blockchain.rs  logs.rs  mempool.rs  mod.rs  overview.rs  peers.rs
src/components/details/: live_cells_searcher.rs  menu.rs  mod.rs
src/components/details/live_cells_searcher/: derive_from_ckb_address_dialog.rs  display_cells_dialog.rs  mod.rs
src/utils/: bar_chart.rs  mod.rs
