[package]
edition = "2024"
name = "ckb-tui"
version = "0.1.0"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
ckb-jsonrpc-types = "0.202.0"
ckb-jsonrpc-types-new = {git = "https://github.com/nervosnetwork/ckb", branch = "zhangsoledad/tui", package = "ckb-jsonrpc-types"}
ckb-sdk = "4.1.0"
clap = {version = "4.5.46", features = ["derive"]}
cursive = { version = "0.21.1", features = ["toml"] }
cursive-aligned-view = "0.7.0"
cursive-async-view = "0.8.0"
cursive_table_view = "0.15.0"
http = "1.3.1"
log = "0.4.27"
queue = "0.3.1"
rand = "0.9.2"
tokio = "1.48.0"
tokio-stream = "0.1.17"
numext-fixed-uint = "0.1"
number_prefix = "0.4.0"
cursive-spinner-view = "0.1.5"
